--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "babel-plugin",
     "react"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
