--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         node: ['12', '10']
-    name: Node ${{ matrix.node }}
+    name: Build and Test (Node ${{ matrix.node }})
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
